--- a/README.rdoc
+++ b/README.rdoc
@@ -6,6 +6,6 @@ A Redmine plugin that replaces the default syntax highlighting engine (CodeRay) 
 
 Next, use Rails' handy-dandy plugin installer to grab this plugin:
 
-  script/plugin install git://github.com/k2s/redmine_js_syntax_highlighter.git
+  cd plugin; 
+  git clone git@github.com:gaooh/redmine_js_syntax_highlighter.git
 
-Alternatively, you can just copy content of <tt>edmine_js_syntax_highlighter</tt> directory into <tt>vendor/plugins</tt>.
